--- a/Wilks-Calculator/index.html
+++ b/Wilks-Calculator/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 
 <head>
     <title>
@@ -13,6 +13,8 @@
 
     <link rel="stylesheet" type="text/css" href="../main.css">
 
+	
+    
     
 
 </head>
@@ -226,8 +228,7 @@
 
 
 
-    <script src="wilks.js"></script>
-
+<script src="wilks.js"></script>
 </body>
 
 </html>
